--- a/drivertab/templates/iodata/trips.html
+++ b/drivertab/templates/iodata/trips.html
@@ -77,6 +77,7 @@
       </div>
 	  
      </div>
+     {% if note %}
      <div class="row-fluid">
       Poznamka: {{ note }}<br/>
       {% if loadingDateTime %}
@@ -86,6 +87,7 @@
 	  Vyloženo: {{ unloadedQuantity }} {{ unit }}, {{ unloadingDateTime|date:"d.m.y: H:i" }}, {{ unloadingDriver }}</br>
       {% endif %}
      </div> 
+     {% endif %}
 	 
      <div class="well load">
       <form action="/trips/" method="post" class="form-horizontal">
