--- a/drivertab/templates/iodata/trips.html
+++ b/drivertab/templates/iodata/trips.html
@@ -4,10 +4,10 @@
   <meta charset="utf-8">
   <title>TruckIS</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="media/css/bootstrap.css" rel="stylesheet">
-  <link href="media/css/bootstrap-responsive.css" rel="stylesheet">
+  <link href="/media/css/bootstrap.css" rel="stylesheet">
+  <link href="/media/css/bootstrap-responsive.css" rel="stylesheet">
   <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.7.1.min.js"></script>
-  <script src="media/js/bootstrap.js"></script>
+  <script src="/media/js/bootstrap.js"></script>
   <script type="text/javascript">
     $(document).ready(function() {
       $('div.load').hide();
@@ -47,9 +47,11 @@
    <div class="alert alert-info">
     Řidič: {{ driver_name }} &nbsp;&nbsp;&nbsp;&nbsp;<a href="/logout/" class="btn btn-warning">Odhlášení</a>
    </div>
+   {% if error %}
    <div class="alert alert-error">
-    {% error %}
+    {{ error }}
    </div>
+   {% endif %}
 
 {% for customer, endCustomer, truck, fromPlace, toPlace, unit, loadedQuantity, unloadedQuantity, material, startDate,  deliveryNumber, loadingDriver, loadingDateTime, unloadingDriver, unloadingDateTime, note, id in tripList %}
     <div class="well trip" id="{{ id }}">
