--- a/drivertab/templates/iodata/login.html
+++ b/drivertab/templates/iodata/login.html
@@ -36,7 +36,7 @@
      <div class="control-group">
       <label class="control-label" for="password">Heslo:</label>
       <div class="controls">
-       <input type="password" class="input-xlarge" id="password" name="password">
+       <input type="number" class="input-xlarge password" id="password" name="password">
       </div>
      </div>
      <div class="form-actions">
