--- a/drivertab/templates/iodata/trips.html
+++ b/drivertab/templates/iodata/trips.html
@@ -128,7 +128,7 @@
        <div class="control-group">
         <label class="control-label" for="password">Heslo:</label>
         <div class="controls">
-         <input type="number" class="input-xlarge" id="password" name="password">
+         <input type="number" class="input-xlarge password" id="password" name="password">
         </div>
        </div>
        <div class="form-actions">
@@ -178,7 +178,7 @@
        <div class="control-group">
         <label class="control-label" for="password">Heslo:</label>
         <div class="controls">
-         <input type="number" class="input-xlarge" id="password" name="password">
+         <input type="number" class="input-xlarge password" id="password" name="password">
         </div>
        </div>
        <div class="form-actions">
