oprava zobrazovani web erroru (500, 404, ...)

--- a/drivertab/templates/502.html
+++ b/drivertab/templates/502.html
@@ -1,9 +1,4 @@
 {% extends "base.html" %}
-{% block head %}
-<title>MS Třídnice | Osobní stránka</title>
-{% endblock %}
-{% block navigace %}
-<div id="nav_oblast">
+{% block errormessage %}
 <h2>Error - 502 - service temporarily overloaded</h2>
-</div>
 {% endblock %}
