--- a/drivertab/templates/404.html
+++ b/drivertab/templates/404.html
@@ -1,9 +1,4 @@
 {% extends "base.html" %}
-{% block head %}
-<title>MS Třídnice | Osobní stránka</title>
-{% endblock %}
-{% block navigace %}
-<div id="nav_oblast">
+{% block errormessage %}
 <h2>Error - 404 - file not found</h2>
-</div>
 {% endblock %}
