--- a/drivertab/templates/500.html
+++ b/drivertab/templates/500.html
@@ -1,9 +1,4 @@
 {% extends "base.html" %}
-{% block head %}
-<title>MS Třídnice | Osobní stránka</title>
-{% endblock %}
-{% block navigace %}
-<div id="nav_oblast">
+{% block errormessage %}
 <h2>Error - 500 - internal error</h2>
-</div>
 {% endblock %}
