--- a/drivertab/templates/503.html
+++ b/drivertab/templates/503.html
@@ -1,9 +1,4 @@
 {% extends "base.html" %}
-{% block head %}
-<title>MS Třídnice | Osobní stránka</title>
-{% endblock %}
-{% block navigace %}
-<div id="nav_oblast">
+{% block errormessage %}
 <h2>Error - 503 - service unavailable</h2>
-</div>
 {% endblock %}
