--- a/drivertab/templates/iodata/login.html
+++ b/drivertab/templates/iodata/login.html
@@ -28,15 +28,15 @@
     <form action="/" method="post" class="form-horizontal">
      {% csrf_token %}
      <div class="control-group">
-      <label class="control-label" for="pin">PIN:</label>
+      <label class="control-label" for="pin">ID:</label>
       <div class="controls">
-       <input type="text" class="input-xlarge" id="pin" name="pin">
+       <input type="number" class="input-xlarge" id="pin" name="pin">
       </div>
      </div>
      <div class="control-group">
       <label class="control-label" for="password">Heslo:</label>
       <div class="controls">
-       <input type="number" class="input-xlarge password" id="password" name="password">
+       <input type="number" class="input-xlarge password" autocomplete="off" id="password" name="password">
       </div>
      </div>
      <div class="form-actions">
