--- a/drivertab/templates/iodata/trips.html
+++ b/drivertab/templates/iodata/trips.html
@@ -128,7 +128,7 @@
        <div class="control-group">
         <label class="control-label" for="password{{ id }}">Heslo:</label>
         <div class="controls">
-         <input type="number" class="input-xlarge password" id="password{{ id }}" name="password">
+         <input type="number" autocomplete="off" class="input-xlarge password" id="password{{ id }}" name="password">
         </div>
        </div>
        <div class="form-actions">
@@ -139,7 +139,7 @@
      </div>
 
      <div class="well unload">
-      <form action="/trips/" method="post" class="form-horizontal">
+      <form novalidate action="/trips/" method="post" class="form-horizontal">
       {% csrf_token %}
        <h3>Vykládka</h3>
        <div class="control-group">
@@ -178,7 +178,7 @@
        <div class="control-group">
         <label class="control-label" for="UNpassword{{ id }}">Heslo:</label>
         <div class="controls">
-         <input type="number" class="input-xlarge password" id="UNpassword{{ id }}" name="password">
+         <input type="number" autocomplete="off" class="input-xlarge password" id="UNpassword{{ id }}" name="password">
         </div>
        </div>
        <div class="form-actions">
